Portfolio site added video

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+
+    <video autoplay loop muted id="video-background"width=100% height=50%>
+  <source src="C:\Users\adhik\Downloads\14551290_3840_2160_50fps.mp4" type="video/mp4">
+  </video>
+
     </header>
 
-    <main>
+ <main>
 
         <!-- About Section -->
         <section id="about">
@@ -28,6 +33,7 @@
             <img src="Images/default-avatar.webp" alt="Profile Picture" class="profile-img">
 
             <p>Hello! I am Dishan and this is my simple portfolio.</p>
+
         </section>
 
         <!-- Projects Section -->
