--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
 
     <video autoplay loop muted id="video-background"width=100% height=50%>
-  <source src="C:\Users\adhik\Downloads\14551290_3840_2160_50fps.mp4" type="video/mp4">
+  <source src="Videos/14551290_3840_2160_50fps.mp4" type="video/mp4">
   </video>
 
     </header>
